route getChildrenAlert