@@ -68,11 +68,13 @@ public class FirestationService {
         return removed;
     }
 
+    //Créer un DAO
+    //Dans personService avoir method getPersonsByAddress
     public FirestationResponse getPersonsCoveredByStation(String stationNumber) {
         List<String> addresses = dataContainer.getFirestations().stream()
                 .filter(f -> f.getStation().equals(stationNumber))
                 .map(Firestation::getAddress)
-                .collect(Collectors.toList());
+                .toList();
 
         List<PersonInfo> personInfoList = new ArrayList<>();
         int numberOfAdults = 0;
@@ -80,7 +82,6 @@ public class FirestationService {
 
         for (Person person : dataContainer.getPersons()) {
             if (addresses.contains(person.getAddress())) {
-                // Obtenez le dossier médical correspondant à la personne
                 Optional<MedicalRecord> medicalRecordOptional = medicalRecordService.getMedicalRecordByPerson(person);
                 if (medicalRecordOptional.isPresent()) {
                     MedicalRecord medicalRecord = medicalRecordOptional.get();
